2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Minor fixes.
	* src/SDCCast.c:
	  Enable standard library call optimization for pdk14.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Optimize conditional jump on bit test.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes for subtraction.
	* src/SDCCglue.c:
	  Fix output of __sfr locations.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Generate better code for ^, |, &.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Slightly improve __sfr16 handling, fix pseudoregister saving in interrupt routine.
	* src/pdk/main.c:
	  Fix zero-initialization of upper byte of pseudo-register p.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/*.c:
	  Enable some regression tests that need struct assignment support.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  device/lib/pdk14/Makefile.in:
	  Implement unary float minus, enable build of most of the float library.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix handling of non-stack temporary operands in cost function.
	* device/lib/pdk14/Makefile.in:
	  Enable build of more library functions.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fixes and improvements for stm8 peephole rules, patch by Visenri.

2019-01-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  ez80_z80 fixes.
	* src/z80/gen.c:
	  Only use eZ80 lea for stack frame setup when doing so provides a code size advantage.
	* .version:
	  Bump version for stable ez80_z80 backend.
	* support/regression/Makefile.in:
	  Include ez80_z80 backend in test-z80 target.

2019-01-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
